appointment model create

--- a/views/male_patient.xml
+++ b/views/male_patient.xml
@@ -2,29 +2,29 @@
 <odoo>
 
 <!--    <female actions window/>-->
-    <record id="action_menu_female_patient" model="ir.actions.act_window">
-        <field name="name">Female Patients</field>
+    <record id="action_menu_male_patient" model="ir.actions.act_window">
+        <field name="name">Male Patients</field>
         <field name="res_model">hospital.patient</field>
         <field name="view_mode">tree,form</field>
 
 <!--        <apply domain/>-->
-        <field name="domain">[('gender', '=', 'female')]</field>
+        <field name="domain">[('gender', '=', 'male')]</field>
 
 <!--        < set default value apply using context/>-->
-        <field name="context">{'default_gender': 'female'}</field>
+        <field name="context">{'default_gender': 'male'}</field>
 
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
-                Create a new female patient.
+                Create a new male patient.
             </p>
         </field>
     </record>
 
 
-    <menuitem id="menu_female_patient"
-              name="Female Patients"
-              action="action_menu_female_patient"
+    <menuitem id="menu_male_patient"
+              name="Male Patients"
+              action="action_menu_male_patient"
               parent="menu_patient_master"
-              sequence="1"/>
+              sequence="2"/>
 
 </odoo>
