--- a/views/menu.xml
+++ b/views/menu.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-<!--    <parent menu/>-->
+    <!--    <parent menu/>-->
     <menuitem id="menu_hospital_root"
               name="Hospital"
               sequence="0"/>
 
-<!--    <submenu/>-->
+    <!--    <submenu/>-->
     <menuitem id="menu_patient_master"
               name="Patients Details"
               parent="menu_hospital_root"
               sequence="0"/>
 
+
+    <menuitem id="menu_appointment_master"
+              name="Appointment Details"
+              parent="menu_hospital_root"
+              sequence="1"/>
 
 
 </odoo>
