--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -17,11 +17,19 @@
                 <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]"/>
                 <separator/>
                 <filter name="filter_kid" string="Kids" domain="[('age', '&lt;=', 5)]"/>
+                <filter name="filter_archive" string="Archived" domain="[('active', '=', False)]"/>
 
                 <!--                < add group by/>-->
                 <group expand="0" string="Group By">
                     <filter name="group_by_gender" string="Gender" context="{'group_by':'gender'}"/>
                 </group>
+
+                <!--                <add searchpanel/>-->
+                <searchpanel>
+                    <field name="gender" icon="fa-users" select="multi"  enable_counters="1"/>
+                </searchpanel>
+
+
             </search>
         </field>
     </record>
@@ -61,6 +69,12 @@
                         </group>
                     </group>
                 </sheet>
+                <!-- Chatter -->
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" groups="base.group_user"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
@@ -71,6 +85,10 @@
         <field name="name">Patients Cards</field>
         <field name="res_model">hospital.patient</field>
         <field name="view_mode">tree,form</field>
+
+        <!--        <set default filter and group_by search/>-->
+        <!--        <field name="context">{'search_default_group_by_gender':1,'search_default_filter_male':1}</field>-->
+        <field name="context">{'search_default_group_by_gender':1}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create a new patient.
