--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -2,13 +2,34 @@
 <odoo>
 
     <!--    <appointment tree view/>-->
+    <record id="appointment_activity_view" model="ir.ui.view">
+        <field name="name">hospital.appointment.activity</field>
+        <field name="model">hospital.appointment</field>
+        <field name="arch" type="xml">
+            <activity string="Appointments">
+                <field name="ref"/>
+                <templates>
+                    <div t-name="activity-box">
+                        <img t-att-src="activity_image('hospital.patient', 'image', record.patient_id.raw_value)"
+                             t-att-title="record.patient_id.value" t-att-alt="record.patient_id.value"/>
+                        <div>
+                            <field name="ref" display="full"/>
+                        </div>
+                    </div>
+                </templates>
+            </activity>
+        </field>
+    </record>
+
+
+    <!--    <appointment tree view/>-->
     <record id="appointment_tree_view" model="ir.ui.view">
         <field name="name">hospital.appointment.tree</field>
         <field name="model">hospital.appointment</field>
         <field name="arch" type="xml">
             <!--            <remove create/>-->
             <!--            <tree create="0">-->
-            <tree>
+            <tree multi_edit="1">
                 <field name="patient_id"/>
                 <field name="gender"/>
                 <field name="appointment_time"/>
@@ -60,10 +81,23 @@
                     <!--                    <add notebook/>-->
                     <notebook>
                         <page string="Prescription">
-                            <field name="prescription" placeholder="Enter Your Prescription"/>
+                            <field name="prescription" placeholder="Enter Your Prescription" options="{'resizable': true, 'codeview':true}"/>
                         </page>
                         <page string="Pharmacy">
-
+                            <field name="pharmacy_id">
+                                <tree editable="bottom">
+                                    <field name="product_id"/>
+                                    <field name="price_unit"/>
+                                    <field name="qty"/>
+                                </tree>
+                                <form>
+                                    <group>
+                                        <field name="product_id"/>
+                                        <field name="price_unit"/>
+                                        <field name="qty"/>
+                                    </group>
+                                </form>
+                            </field>
                         </page>
                     </notebook>
                 </sheet>
@@ -82,7 +116,7 @@
     <record id="action_menu_appointment" model="ir.actions.act_window">
         <field name="name">Appointment Cards</field>
         <field name="res_model">hospital.appointment</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,activity</field>
         <field name="context">{}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
