--- a/views/menu.xml
+++ b/views/menu.xml
@@ -18,5 +18,10 @@
               parent="menu_hospital_root"
               sequence="1"/>
 
+    <menuitem id="menu_configuration"
+              name="Configurations"
+              parent="menu_hospital_root"
+              sequence="2"/>
+
 
 </odoo>
